--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "dependencies": {
     "axios": "^1.13.2",
     "axios-retry": "^4.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^4.21.2",
     "kiotviet-client-sdk": "^0.3.4",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "scripts": {
+    "dev": "node server.js",
+    "start": "node server.js"
   }
 }
