--- a/UI/.env
+++ b/UI/.env
@@ -1,5 +1,9 @@
 LEMYDE_API_URL=http://connect.lemyde.com
-KIOTVIET_CLIENT_ID=your_client_id
-KIOTVIET_CLIENT_SECRET=your_client_secret
-KIOTVIET_RETAILER_NAME=your_retailer_name
+
+# KiotViet API
+KIOTVIET_CLIENT_ID=d7e98e94-6cad-48cc-979c-a78818ff9639
+KIOTVIET_CLIENT_SECRET=8ADC4481949E2C150E8201924185DF86A640AE50
+KIOTVIET_RETAILER_NAME=hkdlevanhoa
+
+
 PORT=3000
