--- a/UI/data/migration_mapping.json
+++ b/UI/data/migration_mapping.json
@@ -274,9 +274,178 @@
     "10506": 7869627,
     "10507": 7851759,
     "10508": 7864037,
-    "10511": 8177098
+    "10511": 8177098,
+    "10512": 8178468
   },
   "orders": {
+    "82286": {
+      "kiotvietId": 3241204,
+      "kiotvietCode": "DH000180"
+    },
+    "82313": {
+      "kiotvietId": 3241203,
+      "kiotvietCode": "DH000179"
+    },
+    "82323": {
+      "kiotvietId": 3241202,
+      "kiotvietCode": "DH000178"
+    },
+    "82329": {
+      "kiotvietId": 3241201,
+      "kiotvietCode": "DH000177"
+    },
+    "82344": {
+      "kiotvietId": 3241199,
+      "kiotvietCode": "DH000176"
+    },
+    "82356": {
+      "kiotvietId": 3241192,
+      "kiotvietCode": "DH000175"
+    },
+    "82365": {
+      "kiotvietId": 3241191,
+      "kiotvietCode": "DH000174"
+    },
+    "82373": {
+      "kiotvietId": 3241190,
+      "kiotvietCode": "DH000173"
+    },
+    "82379": {
+      "kiotvietId": 3241189,
+      "kiotvietCode": "DH000172"
+    },
+    "82380": {
+      "kiotvietId": 3241188,
+      "kiotvietCode": "DH000171"
+    },
+    "82385": {
+      "kiotvietId": 3241187,
+      "kiotvietCode": "DH000170"
+    },
+    "82397": {
+      "kiotvietId": 3241186,
+      "kiotvietCode": "DH000169"
+    },
+    "82412": {
+      "kiotvietId": 3241185,
+      "kiotvietCode": "DH000168"
+    },
+    "82413": {
+      "kiotvietId": 3241184,
+      "kiotvietCode": "DH000167"
+    },
+    "82414": {
+      "kiotvietId": 3241183,
+      "kiotvietCode": "DH000166"
+    },
+    "82416": {
+      "kiotvietId": 3241182,
+      "kiotvietCode": "DH000165"
+    },
+    "82417": {
+      "kiotvietId": 3241181,
+      "kiotvietCode": "DH000164"
+    },
+    "82448": {
+      "kiotvietId": 3241180,
+      "kiotvietCode": "DH000163"
+    },
+    "82449": {
+      "kiotvietId": 3241178,
+      "kiotvietCode": "DH000162"
+    },
+    "82450": {
+      "kiotvietId": 3241177,
+      "kiotvietCode": "DH000161"
+    },
+    "82451": {
+      "kiotvietId": 3241176,
+      "kiotvietCode": "DH000160"
+    },
+    "82452": {
+      "kiotvietId": 3241175,
+      "kiotvietCode": "DH000159"
+    },
+    "82453": {
+      "kiotvietId": 3241174,
+      "kiotvietCode": "DH000158"
+    },
+    "82454": {
+      "kiotvietId": 3241173,
+      "kiotvietCode": "DH000157"
+    },
+    "82491": {
+      "kiotvietId": 3241171,
+      "kiotvietCode": "DH000156"
+    },
+    "82492": {
+      "kiotvietId": 3241170,
+      "kiotvietCode": "DH000155"
+    },
+    "82493": {
+      "kiotvietId": 3241169,
+      "kiotvietCode": "DH000154"
+    },
+    "82494": {
+      "kiotvietId": 3241168,
+      "kiotvietCode": "DH000153"
+    },
+    "82495": {
+      "kiotvietId": 3241167,
+      "kiotvietCode": "DH000152"
+    },
+    "82498": {
+      "kiotvietId": 3241166,
+      "kiotvietCode": "DH000151"
+    },
+    "82499": {
+      "kiotvietId": 3241165,
+      "kiotvietCode": "DH000150"
+    },
+    "82500": {
+      "kiotvietId": 3241164,
+      "kiotvietCode": "DH000149"
+    },
+    "82501": {
+      "kiotvietId": 3241163,
+      "kiotvietCode": "DH000148"
+    },
+    "82502": {
+      "kiotvietId": 3241162,
+      "kiotvietCode": "DH000147"
+    },
+    "82503": {
+      "kiotvietId": 3241161,
+      "kiotvietCode": "DH000146"
+    },
+    "82504": {
+      "kiotvietId": 3241160,
+      "kiotvietCode": "DH000145"
+    },
+    "82505": {
+      "kiotvietId": 3241159,
+      "kiotvietCode": "DH000144"
+    },
+    "82508": {
+      "kiotvietId": 3241158,
+      "kiotvietCode": "DH000143"
+    },
+    "82509": {
+      "kiotvietId": 3241157,
+      "kiotvietCode": "DH000142"
+    },
+    "82510": {
+      "kiotvietId": 3241156,
+      "kiotvietCode": "DH000141"
+    },
+    "82511": {
+      "kiotvietId": 3241155,
+      "kiotvietCode": "DH000140"
+    },
+    "82512": {
+      "kiotvietId": 3241154,
+      "kiotvietCode": "DH000139"
+    },
     "82513": {
       "kiotvietId": 3241143,
       "kiotvietCode": "DH000138"
