--- a/UI/package.json
+++ b/UI/package.json
@@ -1,9 +1,27 @@
 {
+  "name": "kiotviet-migration-ui",
+  "version": "1.0.0",
   "scripts": {
     "server": "ts-node server.ts",
-    "dev": "nodemon --exec ts-node server.ts"
+    "dev": "nodemon --exec ts-node server.ts",
+    "build": "tsc || true",
+    "start": "node dist/server.js",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "postbuild": "cp -r public dist/ && cp .env dist/ 2>/dev/null || true"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "typescript": "^5.3.0",
+    "rimraf": "^5.0.5"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
+    "kiotviet-client-sdk": "^0.3.4"
   }
 }
